src/components/Game/PlaysEvents/PlaysEvents.module.scss
@import 'scss/vars.scss';
@import 'scss/animations.scss';

.events {
  grid-area: events;
  position: relative;
}

.beforeBlue::before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 0;
  height: 2px;
  background-color: var(--side-color);
}

.blueTopLoad::before {
	width: calc(100% - 6px);
}

.wider::before {
	animation: slideToRight .2s linear forwards;
}

.taller::before {
	animation: slideToLeft .2s linear forwards;
}

@keyframes slideToLeft {
	from {
		width: calc(100% - 6px);
	}

	to {
		width: 0;
	}
}

@keyframes slideToRight {
	from {
		width: 0;
	}

	to {
		width: calc(100% - 6px);
	}
}

.list {
  overflow-y: scroll;
  height: 92%;
  background: white;
	scroll-behavior: smooth;

  &::-webkit-scrollbar {
    width: 6px;
  }

  &::-webkit-scrollbar-track {
    background: #e5e5e5;
  }

  &::-webkit-scrollbar-thumb {
    width: 6px;
    background: #acacac;
    border: 2px solid #e5e5e5;
    border-radius: 5px;
  }

  > * {
    display: flex;
    align-items: center;
    column-gap: 8px;
    cursor: pointer;
    padding: 4px 8px;

    &.active {
      animation: backgroundChange var(--transition-speed) forwards;
    }
  }

  > * > *:first-child {
    flex: 0 0 30px;
    width: 30px;
    height: 30px;
    border: 0.5px solid #000000;
    border-radius: 15px;
    font: 400 1.125rem var(--font-comfortaa);
    color: #ffffff;
    line-height: 30px;
    text-align: center;
    position: relative;

    &.obr {
      font-size: 0.75rem;
    }

    > div {
      width: 100%;
      height: 100%;

      > svg {
        position: absolute;

        &:first-child {
          left: 52%;
          top: 22%;
          transform: translate(-50%);
        }
        &:last-child {
          left: 48%;
          bottom: 18%;
          transform: translate(-50%);
        }
      }
    }

    &::before {
      content: attr(data-before);
      position: absolute;
      left: -4px;
      top: -11.9px;
      font-size: 8px;
      color: black;
    }
  }

  @media only screen and (min-device-width: 481px) and (max-device-width: 1366px) and (max-device-height: 1024px) and (orientation: landscape) {
    border-right: 6px solid #e5e5e5;
  }
}

.listBottomShadow {
  border-bottom: 0.5px solid #dfdfdf;
  box-shadow: 0px 4px 6px -6px rgba(0, 0, 0, 0.25);
}

.total {
  height: 8%;
  padding-left: 10px;
  padding-top: 10px;
  font: 700 0.8rem / 1.36 var(--font-nunito);
  border-right: 6px solid #e5e5e5;
  background: white;

  > span {
    font-weight: 400;
  }
}

.text {
  font: 400 0.875rem var(--font-nunito);
}

.red {
  background: var(--red-color);
}

.green {
  background: var(--green-color);
}

.blue {
  background: var(--light-blue-color);
}

.yellow {
  background: var(--yellow-color);
}

